transferred SoCraTes only translations to German file

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -10,6 +10,7 @@
     "addon_information": "Informationstext für den Dialog",
     "addon_required": "Zusatzangaben erforderlich…",
     "address_suffix": "Adress-Suffix",
+    "already_registered": "SoCraTes only",
     "billing_address": "Rechnungsanschrift",
     "count": "Anzahl",
     "count_participants_interval": "(0){Bislang gibt es keine Teilnahmezusagen.};(1){Bislang hat ein Mitglied seine Teilnahme zugesagt.};(2-inf){Bislang haben {{count}} Mitglieder ihre Teilnahme zugesagt.}",
@@ -27,6 +28,7 @@
     "export_subscribe": "$t(activities.export). Zum Abo: URL in Kalenderprogramm abonnieren",
     "full": "Alle Plätze sind belegt.",
     "home_address": "Privatanschrift",
+    "ical": "SoCraTes only",
     "impossible": "nicht möglich",
     "invitation": "Einladung versenden",
     "label": "Bezeichnung",
@@ -79,11 +81,16 @@
     "waitinglist": "Warteliste",
     "waitinglist_new": "Neuer Eintrag",
     "waitinglist_not_possible": "Warteliste ist nicht möglich.",
+    "waitinglist_registration_timed_out": "SoCraTes only",
     "which_addon_to_collect": "Die folgenden Zusatzangaben werden bei der Registrierung erfragt. Alle Felder mit * sind Pflichtfelder."
   },
   "activityresults": {
+    "cancel": "SoCraTes only",
+    "done": "SoCraTes only",
     "new": "Neue Session Snap Sammlung",
+    "nothing_to_see_here": "SoCraTes only",
     "photoTitlePlaceholder": "Was kann man hier sehen?",
+    "record_image": "SoCraTes only",
     "submit": "Speichern"
   },
   "announcements": {
@@ -190,6 +197,7 @@
     "events_in_europe_desc": "Jahreskalender von Konferenzen, Open Spaces, BarCamps und anderen Veranstaltungen",
     "faq": "Tipps & FAQs",
     "feedback": "Feedback",
+    "follow": "SoCraTes only",
     "gdcr": "Der Global Day of Coderetreat",
     "gdcr_activities": "Aktivitäten zum GDCR",
     "gdcr_text": "Hier findest Du fast alle deutschsprachigen Veranstaltungen. Eine vollständige Übersicht findest Du auf",
@@ -203,6 +211,8 @@
       "    i.fa.fa-sign-in.fa-fw",
       "    | &nbsp;$t(general.login)"
     ],
+    "goodbye_text_bottom": "SoCraTes only",
+    "goodbye_text_top": "SoCraTes only",
     "guest": "Gast",
     "legal_notice": "Impressum",
     "login": "Anmelden",
@@ -220,12 +230,12 @@
     "save": "Speichern",
     "separator": ",",
     "settings": "Einstellungen",
-    "socrates_date": "27.-30. August 2015, Soltau, Deutschland",
-    "socrates_register": "Voranmeldung hier!",
-    "socrates_text": "5th International Software Craftsmanship and Testing Conference",
+    "show_tweets": "SoCraTes only",
     "submit": "Weiter",
+    "thanks_for_interest": "SoCraTes only",
     "title": "Titel",
     "to_group": "Zur Softwerkskammer-Gruppe",
+    "tweet": "Tweet",
     "url": "URL",
     "welcome": "Willkommen!",
     "what_does_not_work": "Was funktioniert nicht, wie es soll?",
@@ -301,6 +311,10 @@
     "delete": "Mitglied löschen",
     "edit": "Profil bearbeiten",
     "edit_avatar": "Photo bearbeiten",
+    "edit_preregistration": "SoCraTes only",
+    "edit_registration": "SoCraTes only",
+    "edit_socrates_only": "SoCraTes only",
+    "edit_socrates_softwerkskammer": "SoCraTes only",
     "email": "E-Mail",
     "firstname": "Vorname",
     "group_membership": "Gruppenmitgliedschaft",
@@ -321,8 +335,10 @@
     "profile": "Profil",
     "reference": "Wie ich von der Softwerkskammer erfahren habe",
     "resign": "Austreten",
+    "roommate": "SoCraTes only",
     "send_email": "Eine E-Mail an {{firstname}} {{lastname}} senden",
     "twitter": "Twitter",
+    "view": "SoCraTes only",
     "web": "Website / Blog"
   },
   "message": {
