delete URLs now use POST not GET

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -222,6 +222,7 @@
     "name": "Name",
     "new": "Neu",
     "no": "nein",
+    "No": "Nein",
     "none": "keine",
     "overview": "Übersicht",
     "photo": "Neues Photo",
