respecting Nicole's annotations - thanks, Nicole

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -380,7 +380,7 @@
       },
       "members": {
         "deleted": "Das Profil wurde gelöscht.",
-        "hasParticipated": "The user has participated in some SoCraTes.",
+        "hasParticipated": "Der User hat an mindestens einer SoCraTes teilgenommen.",
         "hasSubscriptions": "Der User ist noch Mitglied in Gruppen.",
         "saved": "Das Profil wurde gespeichert."
       },
