Integrate the dashboard into the main menu

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -128,6 +128,7 @@
     "colors": "Farben"
   },
   "dashboard": {
+    "dashboard": "Überblick",
     "description": [
       "p Deine persönliche Softwerkskammer. Wir zeigen Dir hier Deine Gruppen und ihre Aktivitäten."
     ]
