Add link to blog entry to activity actions header
Adds a button in the actions header element that links to the
corresponding blog article. The scheme for the blog entry wiki page is

{groupid}/blog_{date of activity in ISO format}_{activity url suffix}

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -12,6 +12,7 @@
     "address_suffix": "Adress-Suffix",
     "already_registered": "SoCraTes only",
     "billing_address": "Rechnungsanschrift",
+    "blog_entry": "Blogartikel zur Aktivität",
     "count": "Anzahl",
     "count_participants_interval": "(0){Bislang gibt es keine Teilnahmezusagen.};(1){Bislang hat ein Mitglied seine Teilnahme zugesagt.};(2-inf){Bislang haben {{count}} Mitglieder ihre Teilnahme zugesagt.}",
     "create": "Aktivität anlegen",
