Introduce Atom feed for group blog posts
Can be subscribed to from a supported browser (using <link/> in HTML
head) or via a new Subscribe button on top of the blog posts panel.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -470,6 +470,7 @@
     "search": "Wiki durchsuchen",
     "searchresults": "Suchergebnis",
     "subwiki": "Subwiki",
+    "subscribe": "Abonnieren",
     "tooltip": {
       "gotopage": "Zur Seite."
     },
