--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -482,6 +482,7 @@
     "search": "Search wiki",
     "searchresults": "Search Results",
     "subwiki": "Subwiki",
+    "subscribe": "Subscribe",
     "tooltip": {
       "gotopage": "Go to page."
     },
