--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -278,8 +278,8 @@
     "resign": "Austrittsmail schreiben",
     "resign_info": [
       "p Schade, dass Du aus der Softwerkskammer austreten möchtest.",
-      "p Wir respektieren diesen Wunsch und werden ihn umgehend erfüllen. Es wäre schön, wenn Du Dir noch die Zeit nimmst, die untenstehenden Fragen zu beantworten.",
-      "p Das Senden dieses Formulars schickt eine E-Mail an uns Adminsitratoren und wir werden dann manuell Deinen Account löschen."
+      "p Wir respektieren diesen Wunsch. Es wäre schön, wenn Du Dir noch die Zeit nimmst, die untenstehenden Fragen zu beantworten.",
+      "p Das Senden dieses Formulars schickt eine E-Mail an uns Administratoren."
     ],
     "send": "Senden",
     "subject": "Betreff",
