--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -289,8 +289,8 @@
     "resign": "Write Resignment E-mail",
     "resign_info": [
       "p We are sorry that you want to leave.",
-      "p We are respecting this and will remove your account as soon as possible. We would be thankful if you answered the following questions.",
-      "p Account removal is a manual process and sending this form will trigger an e-mail to the administators."
+      "p We are respecting this. We would be thankful if you answered the following questions.",
+      "p Sending this form will trigger an e-mail to the administators."
     ],
     "send": "Send",
     "subject": "Subject",
