Now each member's profile shows which activities they organized or edited.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -318,6 +318,7 @@
     "new": "Neues Mitglied",
     "nickname": "Nickname",
     "notifyOnWikiChanges": "Benachrichtigen bei Änderungen im Wiki",
+    "organizer_or_editor_of": "Organisator / Editor von:",
     "overview": "Übersicht der Mitglieder",
     "participated_in": "Teilgenommen an:",
     "personal_data": "Persönliche Daten",
