--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -329,6 +329,7 @@
     "new": "New Member",
     "nickname": "Nickname",
     "notifyOnWikiChanges": "Notify on wiki changes",
+    "organizer_or_editor_of": "Organizer / Editor of:",
     "overview": "Members Overview",
     "participated_in": "Participated in:",
     "personal_data": "Personal Data",
