Display the wikipages that an user modified or edited.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -330,7 +330,8 @@
     "send_email": "Eine E-Mail an {{firstname}} {{lastname}} senden",
     "twitter": "Twitter",
     "view": "SoCraTes only",
-    "web": "Website / Blog"
+    "web": "Website / Blog",
+    "wikipages_edited": "Angelegte oder modifizierte Wikiseiten"
   },
   "message": {
     "content": {
