--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -341,7 +341,8 @@
     "send_email": "Send e-mail to {{firstname}} {{lastname}}",
     "twitter": "Twitter",
     "view": "View Profile",
-    "web": "Website / Blog"
+    "web": "Website / Blog",
+    "wikipages_edited": "Created or Edited Wiki-Pages"
   },
   "message": {
     "content": {
