Menu entry for viewing one's own profile page.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -329,7 +329,7 @@
     "roommate": "SoCraTes only",
     "send_email": "Eine E-Mail an {{firstname}} {{lastname}} senden",
     "twitter": "Twitter",
-    "view": "SoCraTes only",
+    "view": "Profil ansehen",
     "web": "Website / Blog",
     "wikipages_edited": "Angelegte oder modifizierte Wikiseiten"
   },
