move "help" to wiki - improves #1340 - add link to activity help inside activity form - change "impressum" to "impressum und datenschutz" - change order of bottom menu entries to make impressum more visible

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -28,6 +28,8 @@
     "export": "Für Kalender exportieren",
     "export_subscribe": "$t(activities.export). Zum Abo: URL in Kalenderprogramm abonnieren",
     "full": "Alle Plätze sind belegt.",
+    "helptext" : "Nicht sicher, wie Du es ausfüllen sollst? - ",
+    "helplink" : "Hier gibt es Hilfe",
     "home_address": "Privatanschrift",
     "ical": "SoCraTes only",
     "impossible": "nicht möglich",
@@ -210,7 +212,7 @@
     "goodbye_text_bottom": "SoCraTes only",
     "goodbye_text_top": "SoCraTes only",
     "guest": "Gast",
-    "legal_notice": "Impressum",
+    "legal_notice": "Impressum und Datenschutz",
     "login": "Anmelden",
     "logout": "Abmelden",
     "members_interval": "(0){ keine Mitglieder};(1){ ein Mitglied};(2-inf){ {{count}} Mitglieder}",
