--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -28,6 +28,8 @@
     "export": "Export to calendar",
     "export_subscribe": "$t(activities.export). To subscribe: Subscribe URL in calendar application",
     "full": "All spots are taken.",
+    "helptext" : "Unsure, what to fill in? - ",
+    "helplink" : "Help available here",
     "home_address": "Home address",
     "ical": "ical",
     "impossible": "impossible",
@@ -221,7 +223,7 @@
     ],
     "guest": "Guest",
     "info": "Information",
-    "legal_notice": "Legal Notice",
+    "legal_notice": "Legal Notice and Privacy Declaration",
     "login": "Log in",
     "logout": "Log out",
     "members_interval": "(0){ no members};(1){ one member};(2-inf){ {{count}} members}",
