Meetup-URL can now be entered on the group edit page.

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -252,6 +252,7 @@
     "join": "Gruppe beitreten",
     "leave": "Gruppe verlassen",
     "map_label": "Label in Karte",
+    "meetupURL_label": "Meetup-URL (falls für diese Gruppe erforderlich)",
     "more": "mehr lesen…",
     "new": "Neue Gruppe",
     "other": "Andere",
@@ -262,6 +263,7 @@
       "email_prefix": "steht innerhalb [] vor dem Subject in gesendeten E-Mails",
       "gotogroup": "Zur Gruppenseite.",
       "map_label": "Label, das in der Karte angezeigt wird",
+      "meetupURL_label": "Manche Gruppen kommen leider nicht ohne eine Präsenz auf Meetup aus. Sollte das auch für diese Gruppe gelten, kann hier die Meetup-URL der Gruppe eingetragen werden. Dadurch werden die Meetup-Events der Gruppe automatisch in die Softwerkskammer übernommen.",
       "name": "Die Adresse, unter der die Gruppe \"@softwerkskammer.org\" erreichbar ist.",
       "title": "Anzeigetext innerhalb der Site, ist auch Realname für E-Mails",
       "x_coord": "Waagerechte Position auf der Karte",
