--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -13,6 +13,7 @@
     "already_registered": "SoCraTes only",
     "billing_address": "Rechnungsanschrift",
     "blog_entry": "Blogartikel zur Aktivität",
+    "cloned_from_meetup_text": "Diese Aktivität wurde von Meetup kopiert. Einige Informationen kannst Du daher nur auf Meetup bearbeiten. Deine Änderungen werden zeitnah hierhin übertragen.",
     "count": "Anzahl",
     "count_participants_interval": "(0){Bislang gibt es keine Teilnahmezusagen.};(1){Bislang hat ein Mitglied seine Teilnahme zugesagt.};(2-inf){Bislang haben {{count}} Mitglieder ihre Teilnahme zugesagt.}",
     "create": "Aktivität anlegen",
