--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -208,7 +208,7 @@
       "hr",
       "p.text-right Oder magst Du nochmal reinschauen? ",
       "  span.modaldialog.btn.btn-primary(data-toggle='modal', data-target='#login', data-link='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))",
-      "    i.fa.fa-sign-in.fa-fw",
+      "    i.fas.fa-sign-in-alt.fa-fw",
       "    | &nbsp;$t(general.login)"
     ],
     "goodbye_text_bottom": "SoCraTes only",
