--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -213,7 +213,7 @@
       "hr",
       "p.text-right Or maybe you want to return? ",
       "  span.modaldialog.btn.btn-primary(data-toggle='modal', data-target='#login', data-link='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))",
-      "    i.fa.fa-sign-in.fa-fw",
+      "    i.fas.fa-sign-in-alt.fa-fw",
       "    | &nbsp;$t(general.login)"
     ],
     "goodbye_text_bottom": "Or maybe you want to return?",
