First step towards contact organizers feature

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -309,6 +309,7 @@
     "send": "Senden",
     "subject": "Betreff",
     "to_member": "An Mitglied",
+    "to_contact_persons": "An Ansprechpartner der Gruppe",
     "to_participants": "nur an die Teilnehmer der Aktivität (nicht an Gruppen)",
     "why-resign": "Warum willst Du austreten",
     "write": "Nachricht schreiben"
