Mail to organizers is only sent when the feature is enabled in the group

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -294,6 +294,7 @@
     "y_coord": "Y-Koord."
   },
   "mailsender": {
+    "contact_persons_cannot_be_contacted": "Ansprechpartner können für diese Gruppe nicht kontaktiert werden.",
     "contents": "Inhalt",
     "copy_to_self": "Eine Kopie an mich senden",
     "invitation": "Einladung",
