i18n message when group has not organizers

--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -297,6 +297,7 @@
     "contact_persons_cannot_be_contacted": "Ansprechpartner können für diese Gruppe nicht kontaktiert werden.",
     "contents": "Inhalt",
     "copy_to_self": "Eine Kopie an mich senden",
+    "group_has_no_organizers": "Die Gruppe hat keine Ansprechpartner.",
     "invitation": "Einladung",
     "notes-resign": "Was möchtest Du uns mitteilen (Anregungen, Kritik, Lob)",
     "notification": "Nachricht",
