--- a/locales/translation-en.json
+++ b/locales/translation-en.json
@@ -303,6 +303,7 @@
     "contact_persons_cannot_be_contacted": "Organizers of this group cannot be contacted.",
     "contents": "Contents",
     "copy_to_self": "Send a copy to myself",
+    "group_has_no_organizers": "Group has no organizers.",
     "invitation": "Invitation",
     "notes-resign": "Please let us know what you think about this site",
     "notification": "Message",
