--- a/locales/translation-de.json
+++ b/locales/translation-de.json
@@ -107,8 +107,6 @@
     "authentication_text": "Du kannst Dich über einen der untenstehenden Dienste authentifizieren. Im Anschluss bitten wir Dich, einige persönliche Daten einzugeben.",
     "authentication_text_green": "Beim letzten Mal hast Du Dich mit dem hervorgehobenen Provider angemeldet:",
     "change_password": "Passwort ändern / anlegen",
-    "error_member_exists": "Es existiert schon ein Mitglied mit dieser E-Mail Adresse.",
-    "error_member_not_exists": "Es existiert kein Mitglied mit dieser E-Mail Adresse.",
     "error": "Authentifizierungsproblem",
     "error_text": [
       "h3 Problem bei der Authentifizierung!",
@@ -136,7 +134,13 @@
     "password": "Passwort",
     "password_repeat": "Passwort wiederholen",
     "password_dialog_title": "Passwort eingeben",
-    "user_pass": "Mit E-Mail und Passwort"
+    "user_pass": "Mit E-Mail und Passwort",
+    "user_pass_info_text": [
+      "p.",
+      "  Gib als existierendes Mitglied Deine E-Mail Adresse und Dein Passwort ein.",
+      "  Um ein Passwort zu setzen, melde Dich zuerst an und lege dann über die 'Profil bearbeiten' Seite ein Passwort an.",
+      "p Um Dich als neues Mitglied zu registireren, gib eine noch nicht vergebende E-Mail-Adresse ein sowie Dein zu verwendendes Passwort."
+    ]
   },
   "colors": {
     "color": "Farbe",
